# fuxedo

./: .travis.yml  AUTHORS  COPYING  Makefile.am  README  README.md  README.rst  RM  autogen.sh  configure.ac
.github/workflows/: fuxedo.yml
include/: atmi.h  atmidefs.h  fml32.h  tmenv.h  tpadm  tpadm.h  tx.h  userlog.h  xa.h  xatmi.h
install-tests/: Makefile
install-tests/bbl/: Makefile  ubbconfig.in
install-tests/blocktime/: Makefile  client.c  server.c  ubbconfig.in
install-tests/server/: Makefile  client.c  defmtserver.c  defserver.c  failserver.c  mtserver.c  server.c  tpforward_client.c  tpreturn_client.c  ubbconfig.in
install-tests/tmshutdown/: Makefile  server.c  ubbconfig.in
install-tests/tpacall/: Makefile  client.c  server.c
install-tests/tpadvertise/: Makefile  client.c  server.c
install-tests/tpcall/: Makefile  client.c  server.c
install-tests/tpcall/.adm/: .keydb
install-tests/tpforward/: Makefile  client.c  servera.c  serverb.c  ubbconfig.in
install-tests/tpinit/: client.c  server.c
install-tests/trx/: Makefile  client.c  post.sql  pre.sql  server.c  server1.pc  server2.pc  ubbconfig.in
install-tests/txnull/: Makefile  client.c  server.c  ubbconfig.in
install-tests/unit/: Makefile  client.cpp
install-tests/view/: Makefile  invalid1.v  valid0.v  valid1.v  valid2.v
m4/: ax_cxx_have_filesystem.m4
src/: BBL.cpp  Makefile.am  TMS.cpp  base64.cpp  basic_parser.h  build.h  buildclient.cpp  buildserver.cpp  buildtms.cpp  calldesc.h  client.cpp  ctxt.cpp  ctxt.h  defs.h  expr.cpp  extreader.h  fbfr32.h  fbfr32fld.h  fields.cpp  fields.h  fieldtbl32.h  fml32.cpp  fux.cpp  fux.h  ipc.cpp  ipc.h  mem.cpp  mib.cpp  mib.h  mibtypes.h  misc.cpp  misc.h  mkfldhdr32.cpp  nonexa.cpp  nullxa.cpp  qm.h  qmxa.cpp  resp.h  server.cpp  svcrepo.h  (+22 more)
tests/: Makefile.am  base64.cpp  expr.cpp  fields  fml32.cpp  ipcq.cpp  mib.cpp  misc.h  qm.cpp  test_fml32.cpp  test_mem.cpp  tests-main.cpp  trx.cpp  userlog.cpp  xatmi.cpp
